[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openpolicyenv"
version = "0.1.0"
description = "OpenPolicyEnv benchmark environment for enterprise access review and least-privilege enforcement."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "openai==1.51.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "httpx==0.27.2"
]